# TinyReactor

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md  index.html
src/: main.cpp
src/Configuration/: ConfigManager.hpp
src/Core/: EventLoop.cpp  EventLoop.hpp
src/HttpParser/: HttpParser.cpp  HttpParser.hpp
src/Worker/: Worker.cpp  Worker.hpp
